--- a/.github/workflows/usertest.yml
+++ b/.github/workflows/usertest.yml
@@ -54,15 +54,14 @@ jobs:
         run: node ./scripts/pack.mjs
 
       - name: Create new project
-        run: pnpx create slidev << N
-        working-directory: ./temp/slidev-project
+        run: echo "N" | pnpm create slidev ./temp/slidev-project
 
       - name: Remove npmrc
         run: pnpx del-cli ./.npmrc
         working-directory: ./temp/slidev-project
         if: ${{ ! matrix.hoist }}
 
-      - name: Install project
+      - name: Install project (npm, pnpm)
         run: ${{ matrix.pm }} i
         working-directory: ./temp/slidev-project
         if: ${{ matrix.pm != 'yarn' }}
