--- a/.github/workflows/usertest.yml
+++ b/.github/workflows/usertest.yml
@@ -21,9 +21,9 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        os: [ubuntu-latest] # [ubuntu-latest, windows-latest, macos-latest]
-        pm: [npm] # [yarn, npm, pnpm]
-        hoist: [false] #[true, false]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        pm: [yarn, npm, pnpm]
+        hoist: [true, false]
       fail-fast: true
 
     steps:
