fix: pnpm setup

--- a/.github/workflows/usertest.yml
+++ b/.github/workflows/usertest.yml
@@ -40,9 +40,17 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Setup
-        run: |
-          npm i -g @antfu/ni pnpm
-          pnpm setup
+        run: npm i -g @antfu/ni pnpm
+      
+      - name: Setup PNPM (Linux, macOS)
+        run: pnpm setup
+        shell: bash
+        if: ${{ matrix.os != 'windows-latest' }}
+      
+      - name: Setup PNPM (Windows)
+        run: pnpm setup
+        shell: pwsh
+        if: ${{ matrix.os == 'windows-latest' }}
 
       - name: Install
         run: nci
