--- a/.github/workflows/usertest.yml
+++ b/.github/workflows/usertest.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest]
         pm: [yarn, npm, pnpm]
         hoist: [true, false]
       fail-fast: true
