--- a/.github/workflows/usertest.yml
+++ b/.github/workflows/usertest.yml
@@ -90,7 +90,7 @@ jobs:
         working-directory: ../temp/slidev-project
 
       - name: Install global
-        run: ${{ matrix.pm }} i -g ${{ github.workspace }}/temp/slidev-pkgs/cli.tgz playwright-chromium
+        run: ${{ matrix.pm }} i -g ${{ github.workspace }}/../temp/slidev-pkgs/cli.tgz playwright-chromium
         if: ${{ matrix.pm != 'yarn' }}
       
       - name: Create slide file
